schema/testdata/validation_permission_LHS_identity_comparison/schema.keel
model User {
fields {
    identity Identity
}
}

model UserProject {
fields {
    user User
    project Project
}
}

model Project {
fields {
    users UserProject[]
}

@permission(
    expression: ctx.identity == project.users.user.identity,
    actions: [create]
)
}