schema/testdata/errors/set_attribute_backlink_repeated_fields.keel
model Record {
    fields {
        name Text
        owner User?
        parent Record?
        children Record[]
    }

    actions {
        create createRecordWithChildren() with (name, children.name) {
            //expect-error:40:41:E031:Both sides of the expression cannot be an array
            @set(record.children.owner = ctx.identity.user.records.owner)
        }
    }
}

model User {
    fields {
        identity Identity {
            @unique
            @relation(user)
        }
        records Record[]
    }
}
